@@ -1,6 +1,7 @@
 CHANGELOG Roundcube Webmail
 ===========================
 
+- Add --config and --type options to moduserprefs.sh script (#1490051)
 - Implemented memcache_debug and apc_debug options
 - Installer: Remove system() function use (#1490139)
 - Password plugin: Added 'kpasswd' driver by Peter Allgeyer
